kafka-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.2.1
        ports:
          - containerPort: 9092
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
        readinessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 60
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  type: LoadBalancer  # Change NodePort to LoadBalancer
  selector:
    app: kafka
  ports:
    - port: 9092         # The port that will be exposed by the LoadBalancer
      targetPort: 9092   # The port on the Kafka pod to which traffic will be sent
