ingress-deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default  # Change if Kafdrop or Kafka is in a different namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: practice.kafka
      http:
        paths:
          - path: /kafdrop
            pathType: Prefix
            backend:
              service:
                name: kafdrop
                port:
                  number: 9000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafdrop 
                port:
                  number: 9000  
          - path: /kafka
            pathType: Prefix
            backend:
              service:
                name: kafka-service 
                port:
                  number: 9002
 
# helm repo add ingress-nginx https://charts.nginx.org
# helm repo update
#  helm install my-nginx ingress-nginx/ingress-nginx
#kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/cloud/deploy.yaml
#kubectl apply -f <your-ingress-file>.yaml
#kubectl get services -o wide -w
